samples/_failures_safe/1761075851_479eff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c06040e8.c: In function ‘main’:
./samples/SAFE/__tmp_c06040e8.c:158:11: error: expected ‘;’ at end of input
  158 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_c06040e8.c:158:5: error: expected declaration or statement at end of input
  158 |     printf
      |     ^~~~~~
